prune stats in shutdownhook